Fix image jumping on load

--- a/ReactProject/src/pages/DeviceInfo.css
+++ b/ReactProject/src/pages/DeviceInfo.css
@@ -159,7 +159,7 @@
         justify-content: center;
         align-items: center;
         margin-bottom: -3px;
-        min-height: 25vh;
+        min-height: 24vh;
         animation: none ;
         transform: none ;
     }
